# dashboard

./: .gitignore  ChangeLog.md  README.md  build.sh  package.yaml  project.cabal
app/: Client.hs  Main.hs  Main2.hs
app/Client/: Main.hs
src/Client/: Timeline.hs  Util.hs
src/Client/Newman/: Board.hs  Build.hs  Jobs.hs
static-files/: index.html
test/: Spec.hs  TimelineSpec.hs
