name: dashboard
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

library
  hs-source-dirs:  src
  exposed-modules: Lib, Client.Timeline, Client.Newman.Board, Client.Util
  default-language: Haskell2010
  build-depends:   base < 5
                 , servant
                 , text
                 , aeson
                 , aeson-compat
                 , aeson-pretty
                 , attoparsec
                 , servant-server
                 , time
                 , wai
                 , warp
                 , http-types
                 , wai-websockets
                 , websockets
                 , servant-client
                 , servant-docs
                 , bytestring
                 , mtl
                 , text
                 , transformers
                 , http-client
                 , safe
                 , sort
                 , unordered-containers


executable dashboard
    hs-source-dirs: app
    main-is: Main.hs
    default-language: Haskell2010
    build-depends: base < 5
                 , servant
                 , text
                 , aeson
                 , aeson-compat
                 , aeson-pretty
                 , attoparsec
                 , servant-server
                 , time
                 , wai
                 , warp
                 , http-types
                 , wai-websockets
                 , websockets
                 , servant-client
                 , servant-docs
                 , bytestring
                 , mtl
                 , text
                 , transformers
                 , http-client
                 , dashboard
                 , safe
                 , sort
                 , unordered-containers

executable client
    hs-source-dirs: app/Client
    main-is: Main.hs
    default-language: Haskell2010
    build-depends: base < 5
                 , servant
                 , text
                 , aeson
                 , aeson-compat
                 , aeson-pretty
                 , attoparsec
                 , servant-server
                 , time
                 , wai
                 , warp
                 , http-types
                 , wai-websockets
                 , websockets
                 , servant-client
                 , servant-docs
                 , bytestring
                 , mtl
                 , text
                 , transformers
                 , http-client
                 , http-client-tls
                 , connection
                 , dashboard
                 , safe
                 , sort
                 , unordered-containers
test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  ghc-options: -fno-warn-missing-home-modules
  hs-source-dirs: test
  build-depends:   base < 5
                 , hspec
                 , servant
                 , text
                 , aeson
                 , aeson-compat
                 , aeson-pretty
                 , attoparsec
                 , servant-server
                 , time
                 , wai
                 , warp
                 , http-types
                 , wai-websockets
                 , websockets
                 , servant-client
                 , servant-docs
                 , bytestring
                 , mtl
                 , text
                 , transformers
                 , http-client
                 , http-client-tls
                 , connection
                 , dashboard
                 , safe
                 , sort
                 , unordered-containers

  default-language: Haskell2010
